# mcp-interface-practice

./: README.md  analysis.py  app.py  git_utils.py  mock_git_utils.py  package.json  pyproject.toml  security.py  server.mjs  server.py  tools.py
config/: allowed_repos.json
docs/: interface.md
git_activity_analyzer/: __init__.py  analyzer.py  server.py
node_impl/: analyzer.mjs  server.mjs
node_tests/: git-activity.test.mjs
tests/: test_git_activity.py
