[project]
name = "mcp-interface-practice"
version = "0.1.0"
description = "MCP server for Git Activity Analyzer"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.43",
    "mcp>=1.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "app",
    "tools",
    "analysis",
    "security",
    "git_utils",
    "mock_git_utils",
    "server",
]
